# whoami

./: .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt
config/: .env.example  prompts.json
scripts/: convert_docs.py  index_documents.py
src/whoami/: README.md  __init__.py  constants.py  document_processor.py  embeddings.py  llm_client.py  ui.py  visualizations.py
