[tool.poetry]
name = "whoami"
version = "0.1.0"
description = "Conversational AI assistant for answering questions about Alec Hantson"
authors = ["HantsonAlec"]
readme = "README.md"
packages = [{include = "whoami", from = "src"}]

[tool.poetry.dependencies]
python = "3.12.*"
streamlit = ">=1.28.0"
sentence-transformers = ">=2.2.0"
pinecone = ">=3.0.0"
PyPDF2 = ">=3.0.0"
python-dotenv = ">=1.0.0"
requests = ">=2.31.0"
tqdm = ">=4.66.0"
torch = ">=2.0.0"
plotly = ">=5.18.0"

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"

[tool.black]
line-length = 120
preview = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
